<resources>
    <string name="app_name">Video player</string>

    <string name="nav_text">Welcome To the world of entertianment</string>
    <string name="version">Version 1.0</string>

    <string name="all_videos">All Videos</string>
    <string name="all_folders">All Folders</string>
    <string name="total_folders">Total Folders:</string>
    <string name="total_videos">Total videos:</string>

    <!--Drawer Strings add -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="theme">Theme</string>
    <string name="feedback">feedback</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <!--Video String -->
    <string name="video_name">Video Name</string>
    <string name="folder_name">Folder Name</string>
    <string name="duration">00:00</string>
    <string name="image">Image</string>

<!--    Video Player Strings-->
    <string name="loading">Loading..</string>
    <string name="semi_colon">:</string>
    <string name="back_btn">Back_btn</string>
    <string name="menu_btn">Menu_btn</string>
    <string name="lock_btn">lock_btn</string>
    <string name="repeat_btn">repeat_btn</string>
    <string name="forward_btn">forward_btn</string>
    <string name="previos_btn">previos_btn</string>
    <string name="fullscreen_btn">fullscreen_btn</string>
    <string name="play_btn">play_btn</string>
    <string name="video_player_title">Ams Video Player</string>
</resources>