<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:controller_layout_id="@layout/custom_control_view"
        android:keepScreenOn="true"
        />

    <LinearLayout
        android:id="@+id/topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:background="#42000000"
        >

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            />

        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/video_name"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee"
            android:textStyle="bold"
            />
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/menu_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu_btn"
            android:layout_marginEnd="50dp"
            />

    </LinearLayout>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/lock_btn"
        android:src="@drawable/lock_open_icon"
        app:layout_constraintEnd_toEndOf="@+id/topController"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/playPauseBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/play_btn"
        android:src="@drawable/play_icon"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/bottomController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:gravity="end|bottom"
        >

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/repeat_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            />


        <ImageButton
            android:id="@+id/prevBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/play_skip_back_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/previos_btn"
            />
        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/play_skip_forward_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/forward_btn"
            />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/fullscreen_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/fullscreen_btn"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>